Remodeling - Work on service/app model (#63)
* fix long tests in sql state bootstrapping.

Logic around rendezvous after transactions have been completed was
causing the tests to wait the full timeout :(

* Use a separate limit for each client connection, rather than sharing.

moar rational thread pooling for local servers. moar rational params for
default limits.

* test fixins n' stablizers

* Clean up tech debt on Context impl.

3 failing tests only.  interim commit

* refactor to manage context membership

back off some changes

* fix assembly test

* fix sql state bootstrapping testing

genesis wasn't filtering out the test subject in the transactioneers and
so was flapping pretty wildly, as the test subject was banging until
bootstrapped, and then the only transactioneer - lol.  So would take
forever.

* refactor liquibase schemas to a common module.

This is a work around until JOOQ is capable of working with current H2
version.

Clean up Stereotomy Resolver.

Clean up liquibase change log organization for modular reuse.  probably
will need to go into full blown package space naming.

Clean up model schema, link with stereotomy

* Favor completion over throughput for lifecycle bootstrapping tests

* mea culpa

* update

* make KEL.append() async.

Clean up some cruft in stereotomy

* use supplier for genesis data

* flesh out grpc Resolver/Binder. Rename stereotomy_kerl schema

* misc

* Move to overlap of view reconfiguration.

Fix age batching q limit

* stabilize

* better error msg

* fix batch limit in producer.

Apparently I have it correct now.  No dropped batches when starting
assembly.

* update grpc version

* Refactor Genesis Assembly

Genesis block now assembled in a rational manner, no queries for vm, as
there is no ability to validate them and we know the initial set.

Add Foundation and FoundationSeal for trust establishment of genesis.
Joins now contain the KEL of th